# bran

./: .gitignore  README.md  generate_badges.py  pyproject.toml  requirements.txt  setup.cfg  static_analysis.py
.github/workflows/: ci.yml
bran/: decorators.py  exceptions.py  loaders.py  serializers.py  synchronized.py
pybran/: __init__.py  decorators.py  exceptions.py  loaders.py  serializers.py  synchronized.py
tests/: test_atomic_id.py  test_decorators.py  test_loader.py  test_serializers.py
