[metadata]
name = pybran
version = 0.0.5
author = nannafudge
author_email = toastnoodles@gmail.com
description = A simple binary serialization/deserialization library for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nannafudge/bran
project_urls =
    Bug Tracker = https://github.com/nannafudge/bran/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = pybran
python_requires = >=3.6

[options.extras_require]
test =
    pytest
    pylint
    coverage
    bandit